# django-poetry

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
django_poetry/: asgi.py  settings.py  urls.py  wsgi.py
django_poetry/.github/workflows/: ci.yml
django_poetry/tests/: test_view.py
tabom/migrations/: 0001_initial.py
tabom/models/: __init__.py  article.py  like.py  user.py
